fixed button styling on mobile devices

--- a/blog1/blog.css
+++ b/blog1/blog.css
@@ -296,6 +296,21 @@ body{
     .toggle-text-bttn {
         display: none;
     }
+
+    .button button{
+        color: #fcfcfc;
+        width: 2.5rem;
+        height: 2rem;
+        border-radius: .5rem;
+        cursor: pointer;
+        margin: 0 .5rem;
+        border: 0;
+        transition: 0.3s;
+        background: rgba(0, 0, 0, 0.15);
+        box-shadow: 0 .5rem 2rem 0 rgba( 31, 38, 135, 0.37 );
+        backdrop-filter: blur( 20px );
+        -webkit-backdrop-filter: blur( 10px );
+    }
     
   }
   
